--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">Tankauswertung</string>
-    <string name="title_timeline">Timeline</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_forecast">Forecast</string>
-    <string name="title_stats">Stats</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_dashboard">Übersicht</string>
+    <string name="title_timeline">Chronik</string>
+    <string name="title_stats">Statistik</string>
+    <string name="title_forecast">Kalkulation</string>
+    <string name="navigation_drawer_open">Öffne Menü</string>
+    <string name="navigation_drawer_close">Schließe Menü</string>
+    <string name="nav_header_title">Name aktuelles Auto</string>
+    <string name="nav_header_subtitle">Infos über aktuelles Auto</string>
+    <string name="nav_header_desc">Navigationsheader</string>
+    <string name="garage">Garage</string>
+    <string name="addCar">Hinzufügen</string>
+    <string name="settings">Einstellungen</string>
 </resources>
