Fragmente für Einstellungen, NeuesAutoAnlegen erstellt Einstellungen (Darkmode) implementiert theme(night) geändert NeuesAutoAnlegen teilweise implementiert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,31 @@
     <string name="nav_header_subtitle">Infos über aktuelles Auto</string>
     <string name="nav_header_desc">Navigationsheader</string>
     <string name="garage">Garage</string>
-    <string name="add_car">Hinzufügen</string>
-    <string name="settings">Einstellungen</string>
+    <string name="title_newcar">Hinzufügen</string>
+    <string name="title_settings">Einstellungen</string>
     <string name="remove_car">Fahrzeug entfernen</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="button_fahzeuganlegen">Fahrzeug anlegen</string>
+    <string name="abbrechen">Abbrechen</string>
+    <string name="anzeigename">Anzeigename</string>
+    <string name="verbrauch_innerorts_l_kwh_100km">Verbrauch innerorts [l/(kWh) / 100km]</string>
+    <string name="verbrauch_au_erorts_l_kwh_100km">Verbrauch außerorts [l/(kWh) / 100km]</string>
+    <string name="verbrauch_kombiniert_l_kwh_100km">Verbrauch kombiniert [l/(kWh) / 100km]</string>
+    <string name="kilometerstand_km">Kilometerstand [km]</string>
+    <string name="tankstand">Tankstand [%]</string>
+    <string name="tankvolumen_l_kwh">Tankvolumen [l(kWh)]</string>
+    <string name="co2_ausstoss_kg_100km">CO2-Ausstoß [kg/100km]</string>
 </resources>
