--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="tankstand">Aktueller Tankstand [%]</string>
     <string name="tankvolumen_l_kwh">Tankvolumen [l(kWh)]</string>
     <string name="co2_ausstoss_g_km">CO2-Ausstoß [g/km]</string>
+    <string name="dark_mode">Nachtmodus</string>
 </resources>
