--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="co2_ausstoss_g_km">CO2-Ausstoß [g/km]</string>
     <string name="dark_mode">Nachtmodus</string>
     <string name="done">Fertig</string>
+    <string name="zero_number">0</string>
 </resources>
