Löschen und grobes Anzeigen implementiert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="dark_mode">Nachtmodus</string>
     <string name="done">Fertig</string>
     <string name="zero_number">0</string>
+    <string name="edit_car">Fahrzeug bearbeiten</string>
+    <string name="no_cars_in_garage">Kein Fahrzeug vorhanden</string>
 </resources>
