--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,17 @@
     <string name="button_fahzeuganlegen">Fahrzeug anlegen</string>
     <string name="abbrechen">Abbrechen</string>
     <string name="anzeigename">Name</string>
-    <string name="verbrauch_innerorts_l_kwh_100km">Verbrauch innerorts [l/(kWh) / 100km]</string>
-    <string name="verbrauch_au_erorts_l_kwh_100km">Verbrauch außerorts [l/(kWh) / 100km]</string>
-    <string name="verbrauch_kombiniert_l_kwh_100km">Verbrauch kombiniert [l/(kWh) / 100km]</string>
+    <string name="verbrauch_innerorts_l_100km">Verbrauch innerorts [l / 100km]</string>
+    <string name="verbrauch_au_erorts_l_100km">Verbrauch außerorts [l / 100km]</string>
+    <string name="verbrauch_kombiniert_l_100km">Verbrauch kombiniert [l / 100km]</string>
+    <string name="verbrauch_innerorts_kwh_100km">Verbrauch innerorts [kWh / 100km]</string>
+    <string name="verbrauch_au_erorts_kwh_100km">Verbrauch außerorts [kWh / 100km]</string>
+    <string name="verbrauch_kombiniert_kwh_100km">Verbrauch kombiniert [kWh / 100km]</string>
     <string name="kilometerstand_km">Kilometerstand [km]</string>
-    <string name="tankstand">Aktueller Tankstand [%]</string>
-    <string name="tankvolumen_l_kwh">Tankvolumen [l(kWh)]</string>
+    <string name="tankstand_l">Aktueller Tankstand [%]</string>
+    <string name="tankstand_kwh">Restladung [%]</string>
+    <string name="tankvolumen_l">Tankvolumen [l]</string>
+    <string name="tankvolumen_kwh">Akkukapazität [kWh]</string>
     <string name="co2_ausstoss_g_km">CO2-Ausstoß [g/km]</string>
     <string name="dark_mode">Nachtmodus</string>
     <string name="done">Fertig</string>
