--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,25 +27,24 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="button_fahzeuganlegen">Fahrzeug anlegen</string>
     <string name="abbrechen">Abbrechen</string>
     <string name="anzeigename">Name</string>
-    <string name="verbrauch_innerorts_l_100km">Verbrauch innerorts [l / 100km]</string>
-    <string name="verbrauch_au_erorts_l_100km">Verbrauch außerorts [l / 100km]</string>
-    <string name="verbrauch_kombiniert_l_100km">Verbrauch kombiniert [l / 100km]</string>
-    <string name="verbrauch_innerorts_kwh_100km">Verbrauch innerorts [kWh / 100km]</string>
-    <string name="verbrauch_au_erorts_kwh_100km">Verbrauch außerorts [kWh / 100km]</string>
-    <string name="verbrauch_kombiniert_kwh_100km">Verbrauch kombiniert [kWh / 100km]</string>
-    <string name="kilometerstand_km">Kilometerstand [km]</string>
-    <string name="tankstand_l">Aktueller Tankstand [%]</string>
-    <string name="tankstand_kwh">Restladung [%]</string>
-    <string name="tankvolumen_l">Tankvolumen [l]</string>
-    <string name="tankvolumen_kwh">Akkukapazität [kWh]</string>
-    <string name="co2_ausstoss_g_km">CO2-Ausstoß [g/km]</string>
+    <string name="verbrauch_innerorts_l_100km">Verbrauch innerorts (l / 100 km)</string>
+    <string name="verbrauch_au_erorts_l_100km">Verbrauch außerorts (l / 100 km)</string>
+    <string name="verbrauch_kombiniert_l_100km">Verbrauch kombiniert (l / 100 km)</string>
+    <string name="verbrauch_innerorts_kwh_100km">Verbrauch innerorts (kWh / 100 km)</string>
+    <string name="verbrauch_au_erorts_kwh_100km">Verbrauch außerorts (kWh / 100 km)</string>
+    <string name="verbrauch_kombiniert_kwh_100km">Verbrauch kombiniert (kWh / 100 km)</string>
+    <string name="kilometerstand_km">Kilometerstand (km)</string>
+    <string name="tankstand_l">Aktueller Tankstand (%)</string>
+    <string name="tankstand_kwh">Restladung (%)</string>
+    <string name="tankvolumen_l">Tankvolumen (l)</string>
+    <string name="tankvolumen_kwh">Akkukapazität (kWh)</string>
+    <string name="co2_ausstoss_g_km">CO2-Ausstoß (g / km)</string>
     <string name="dark_mode">Nachtmodus</string>
     <string name="done">Fertig</string>
     <string name="zero_number">0</string>
     <string name="edit_car">Fahrzeug bearbeiten</string>
     <string name="no_cars_in_garage">Kein Fahrzeug vorhanden</string>
-    <string name="elektro">Elektrofahrzeug</string>
+    <string name="elektrofahrzeug">Elektrofahrzeug</string>
 </resources>
