--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="preis">Preis [€]</string>
     <string name="bild_des_tankbelegs">Bild des Tankbelegs</string>
     <string name="tankvorgang_bild_aufnehmen">Bild aufnehmen</string>
+    <string name="frueher">&lt;</string>
+    <string name="spaeter">&gt;</string>
 </resources>
