Strecke hinzufügen halbwegs stable, noch in Arbeit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="innerorts">innerorts</string>
     <string name="kombiniert">kombiniert</string>
     <string name="ausserorts">außerorts</string>
+    <string name="edit_strecke">Strecke bearbeiten</string>
 </resources>
