Strecke hinzufügen so ziemlich fertig

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="frueher">&lt;</string>
     <string name="spaeter">&gt;</string>
     <string name="edit_strecke">Strecke bearbeiten</string>
+    <string name="streckentyp">Streckentyp</string>
+    <string name="ereignis_bearbeiten">Ereignis bearbeiten</string>
 </resources>
