--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="monat">Monat</string>
     <string name="woche">Woche</string>
     <string name="ten_number">10</string>
+    <string name="theme">Thema</string>
 </resources>
