--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,18 +29,21 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="abbrechen">Abbrechen</string>
     <string name="anzeigename">Name</string>
+    <string name="verbrauch_durchschnittlich">Verbrauch</string>
+    <string name="Reichweite">Reichweite</string>
     <string name="verbrauch_innerorts_l_100km">Verbrauch innerorts (l / 100 km)</string>
     <string name="verbrauch_au_erorts_l_100km">Verbrauch außerorts (l / 100 km)</string>
     <string name="verbrauch_kombiniert_l_100km">Verbrauch kombiniert (l / 100 km)</string>
     <string name="verbrauch_innerorts_kwh_100km">Verbrauch innerorts (kWh / 100 km)</string>
     <string name="verbrauch_au_erorts_kwh_100km">Verbrauch außerorts (kWh / 100 km)</string>
     <string name="verbrauch_kombiniert_kwh_100km">Verbrauch kombiniert (kWh / 100 km)</string>
-    <string name="kilometerstand_km">Kilometerstand (km)</string>
-    <string name="tankstand_l">Aktueller Tankstand (%)</string>
+    <string name="kilometerstand_km">Kilometerstand</string>
+    <string name="tankstand_l">Tankstand</string>
     <string name="tankstand_kwh">Restladung (%)</string>
     <string name="tankvolumen_l">Tankvolumen (l)</string>
     <string name="tankvolumen_kwh">Akkukapazität (kWh)</string>
-    <string name="co2_ausstoss_g_km">CO2-Ausstoß (g/km)</string>
+    <string name="co2_ausstoss">CO2-Ausstoß</string>
+    <string name="co2_ausstoss_g_km">CO2-Ausstoß (g / km)</string>
     <string name="dark_mode">Nachtmodus</string>
     <string name="done">Fertig</string>
     <string name="zero_number">0</string>
