- Fahrzeug hinzufuegen: Verbrauchsslider angepasst, - Tankvorgang hinzufuegen: Hinweistexte bei falschen Eingaben dynamisiert, Activity Titel dynamisiert

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="woche">Woche</string>
     <string name="ten_number">10</string>
     <string name="theme">Thema</string>
+    <string name="edit_tankvorgang_elektro">Ladevorgang bearbeiten</string>
+    <string name="new_tankvorgang_elektro">Ladevorgang hinzufügen</string>
 </resources>
