--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,13 +29,15 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="abbrechen">Abbrechen</string>
     <string name="anzeigename">Name</string>
+
     <!-- bei Wortgruppen dürfen auch Leerzeichen gesetzt werden (nach DIN 5008) -->
-    <string name="verbrauch_innerorts_l_100km">Verbrauch innerorts (l / 100 km)</string>
-    <string name="verbrauch_au_erorts_l_100km">Verbrauch außerorts (l / 100 km)</string>
-    <string name="verbrauch_kombiniert_l_100km">Verbrauch kombiniert (l / 100 km)</string>
-    <string name="verbrauch_innerorts_kwh_100km">Verbrauch innerorts (kWh / 100 km)</string>
-    <string name="verbrauch_au_erorts_kwh_100km">Verbrauch außerorts (kWh / 100 km)</string>
-    <string name="verbrauch_kombiniert_kwh_100km">Verbrauch kombiniert (kWh / 100 km)</string>
+    <string name="verbrauch_innerorts_l_100km">Anfangswert Verbrauch innerorts (l / 100 km)</string>
+    <string name="verbrauch_au_erorts_l_100km">Anfangswert Verbrauch außerorts (l / 100 km)</string>
+    <string name="verbrauch_kombiniert_l_100km">Anfangswert Verbrauch kombiniert (l / 100 km)</string>
+    <string name="verbrauch_innerorts_kwh_100km">Anfangswert Verbrauch innerorts (kWh / 100 km)</string>
+    <string name="verbrauch_au_erorts_kwh_100km">Anfangswert Verbrauch außerorts (kWh / 100 km)</string>
+    <string name="verbrauch_kombiniert_kwh_100km">Anfangswert Verbrauch kombiniert (kWh / 100 km)</string>
+
     <string name="kilometerstand_km">Kilometerstand (km)</string>
     <string name="tankstand_l">Aktueller Tankstand (%)</string>
     <string name="tankstand_kwh">Restladung (%)</string>
