Bugfix: App prueft jetzt ob Bild bei Tankbeleg vorhanden ist wenn die bearbeitung aufgerufen wird. Behebt App Crash bei fehlendem Bild

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="getankte_menge_kwh">Geladen (kWh)</string>
     <string name="preis">Preis (€)</string>
     <string name="bild_des_tankbelegs">Bild des Tankbelegs</string>
-    <string name="tankvorgang_bild_aufnehmen">Bild aufnehmen</string>
+    <string name="tankvorgang_bild_aufnehmen">Tankbeleg fotografieren</string>
     <string name="frueher">&lt;</string>
     <string name="spaeter">&gt;</string>
     <string name="edit_strecke">Strecke bearbeiten</string>
