UX verbessert, insb. Chronik

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,9 +72,7 @@
     <string name="getankte_menge_kwh">Geladen (kWh)</string>
     <string name="preis">Preis (€)</string>
     <string name="bild_des_tankbelegs">Bild des Tankbelegs</string>
-    <string name="tankvorgang_bild_aufnehmen">Tankbeleg fotografieren</string>
-    <string name="frueher">&lt;</string>
-    <string name="spaeter">&gt;</string>
+    <string name="tankvorgang_bild_aufnehmen">Bild aufnehmen</string>
     <string name="edit_strecke">Strecke bearbeiten</string>
     <string name="edit_tankvorgang">Tankvorgang bearbeiten</string>
     <string name="streckentyp">Streckentyp</string>
@@ -113,7 +111,7 @@
     <string name="durchschnitt_verbrauch_l_100km">∅-Verbrauch (l&nbsp;/&nbsp;100 km)</string>
     <string name="durchschnitt_verbrauch_kwh_100km">∅-Verbrauch (kWh&nbsp;/&nbsp;100 km)</string>
     <string name="kilometerstand">Kilometerstand</string>
-    <string name="verbrauch_je_100_km">∅-Verbrauch\n(je 100 km)</string>
+    <string name="verbrauch_je_100_km">∅-Verbrauch\n(je 100&nbsp;km)</string>
     <string name="reichweite">Reichweite</string>
     <string name="co2_ausstoss">CO2-Ausstoß</string>
     <string name="tankstand">Tankstand</string>
