Open-Source-Lizenzen werden jetzt unter den Einstellungen angezeigt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
     <string name="tankvorgang_bild_entfernen">Bild entfernen</string>
     <string name="energieverbrauch">Energieverbrauch</string>
     <string name="stromkosten">Stromkosten</string>
+    <string name="lizenzen">Lizenzen</string>
 </resources>
