--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,9 @@
     <string name="verbrauch_au_erorts_kwh_100km">Anfangswert Verbrauch außerorts (kWh&nbsp;/&nbsp;100 km)</string>
     <string name="verbrauch_kombiniert_kwh_100km">Anfangswert Verbrauch kombiniert (kWh&nbsp;/&nbsp;100 km)</string>
     <string name="kilometerstand_km">Kilometerstand (km)</string>
-    <string name="tankstand_l">Tankstand (%)</string>
-    <string name="tankstand_kwh">Restladung</string>
+    <string name="tankstand_prozent">Tankstand (%)</string>
+    <string name="restladung_prozent">Restladung (%)</string>
+    <string name="restladung">Restladung</string>
     <string name="tankvolumen_l">Tankvolumen (l)</string>
     <string name="tankvolumen_kwh">Akkukapazität (kWh)</string>
     <!-- Schreibweise von Einheiten ohne Leerzeichen (nach DIN 5008) -->
